# sqlserver_administrator

./: .gitignore  README.md  pyproject.toml  run_etl.bat
0_criacao_banco/: create_banco_cryptodb.sql
1_securanca/: create_login_e_user_de_servico.sql
2_backup_and_restore/: README.md  restore_database.sql
2_security/: 1__create_login_user_script.sql
3_auditing_and_monitoring/: README.md  audit_failed_logins.sql  usp_get_failed_logins_report.sql
4_performance/: IX_price_history_price_timestamp.sql  exec_sp_obter_historico_preco_por_data.sql  monitoramento_indice.sql  sp_obter_historico_precos_por_data.sql
auditing_and_monitoring/: README.md  usp_get_failed_logins_report.sql
backup_and_recovery/: README.md  audit_backup_monitoring.sql  full_backup.sql
backup_and_restore/: README.md  audit_historico_backup.sql  diff_backup.sql  log_backup.sql
data_engineering/schema/: config.py  (+1 more)
maintenance_and_automation/: DBA - CryptoDBWeeklyMaintenance_Subplan_1_20251010154626.txt  README.md  audit_dbfragmentation.sql  audit_statistics.sql
manutencao_preventiva/: audit_kpi_de_manutencao.sql
otimizacao_e_performance/: README.md  creating_a_problem_data_volume.sql  sp_Admin_CheckIndexFragmentation.sql
performance_optimization/: IX_price_history_price_timestamp.sql  exec_sp_GetPriceHistoryByDateRange.sql  sp_GetPriceHistoryByDateRange.sql
securanca/: README.md  audit_rotacao_de_credenciais.sql  create_login_e_user_de_usuario.sql
security/: README.md  audit-database_permissions.sql  audit-instance_database_login.sql  create_login_user_script.sql  permission_test.sql
(+64 files in other folders)
